samples/_failures_safe/1761129072_55cb25_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_71fa30bb.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_71fa30bb.c:152:51: error: missing terminating " character
  152 |     if (state < 0 || state >= STATE_COUNT) return "UNKNOWN
      |                                                   ^~~~~~~~
./samples/SAFE/__tmp_71fa30bb.c:152:5: error: expected expression at end of input
  152 |     if (state < 0 || state >= STATE_COUNT) return "UNKNOWN
      |     ^~
./samples/SAFE/__tmp_71fa30bb.c:152:5: error: expected declaration or statement at end of input
